--- a/client/styles/sign-up.css
+++ b/client/styles/sign-up.css
@@ -174,9 +174,10 @@ button:hover {
 }
 
 .terms {
-  margin-top: 10px;
   font-size: 12px;
   color: #555;
+  margin-top: 12px;
+  text-align: center;
 }
 
 .terms a {
