--- a/client/styles/workout-tracker.css
+++ b/client/styles/workout-tracker.css
@@ -1373,7 +1373,8 @@ body.xp-cap #stickyXpBarFill  { background:#bdbdbd; }
   /* Just a simple chevron icon; you can also set the text via JavaScript. */
   transform: rotate(180deg);
   /* rotate the chevron by 180° */
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+  margin-top: 8px;
   color: #fff;
 }
 
