--- a/client/styles/landing-page.css
+++ b/client/styles/landing-page.css
@@ -173,6 +173,7 @@ h6 {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   /* Subtle shadow for elevation */
   transition: all 0.3s ease;
+  width: 300px;
 }
 
 .claim-program-btn:hover {
